--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -20,18 +20,18 @@
 	<string>2</string>
 	<key>PlexAudioCodec</key>
 	<array>
-		<string>MP3</string>
+		<string>AAC</string>
 	</array>
 	<key>PlexMediaContainer</key>
 	<array>
-		<string>FLV</string>
+		<string>MP4</string>
 		<string>Flash</string>
 	</array>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 	<key>PlexVideoCodec</key>
 	<array>
-		<string>VP6F</string>
+		<string>H.264</string>
 	</array>
 	<key>PlexURLServices</key>
 	<dict>
