Use * for PlexClientPlatforms instead of omitting it

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -27,6 +27,8 @@
 		<string>MP4</string>
 		<string>Flash</string>
 	</array>
+	<key>PlexClientPlatforms</key>
+	<string>*</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 	<key>PlexVideoCodec</key>
